# Minecraft-PE-0.6.1-Win32-port

./: CMakeLists.txt  README.md  build-xp.ps1
build-xp/: server.properties
build-xp/data/lang/: en_US.lang
build-xp/level/: level.dat_old
build-xp/world/: level.dat_old
project/android/assets/lang/: en_US.lang
project/android/jni/: Android.mk
project/android_java/assets/lang/: en_US.lang
project/android_java/jni/: Android.mk
project/lib_projects/raknet/jni/: Android.mk
project/lib_projects/raknet/jni/RaknetSources/: FileList.cpp  WindowsIncludes.h
src/: AppPlatform.h  AppPlatform_android.h  AppPlatform_glfw.h  AppPlatform_iOS.h  AppPlatform_iOS.mm  AppPlatform_win32.cpp  AppPlatform_win32.h  NinecraftApp.cpp  SharedConstants.cpp  main.cpp  main_android.cpp  main_android.h  main_android_java.cpp  main_android_java.h  main_dedicated.cpp  main_glfw.h  main_win32.h
src/client/: Minecraft.cpp  Minecraft.h  MouseHandler.cpp  Options.cpp  Options.h  OptionsFile.cpp  OptionsFile.h
src/client/gui/: Font.cpp  Gui.cpp  Gui.h  Screen.cpp  Screen.h
src/client/gui/components/: Button.cpp  GuiElement.h  GuiElementContainer.cpp  GuiElementContainer.h  ImageButton.cpp  ImageButton.h  LargeImageButton.cpp  OptionsGroup.cpp  OptionsGroup.h  OptionsItem.cpp  OptionsItem.h  OptionsPane.cpp  OptionsPane.h  ScrollingPane.cpp  ScrollingPane.h  Slider.cpp  Slider.h  SmallButton.cpp  SmallButton.h  TextBox.cpp  TextBox.h
src/client/gui/screens/: ConfirmScreen.cpp  ConfirmScreen.h  ConsoleScreen.cpp  DeathScreen.cpp  DisconnectionScreen.h  InBedScreen.cpp  IngameBlockSelectionScreen.cpp  IngameBlockSelectionScreen.h  JoinGameScreen.cpp  JoinGameScreen.h  OptionsScreen.cpp  OptionsScreen.h  PauseScreen.cpp  PauseScreen.h  ProgressScreen.h  ScreenChooser.cpp  ScreenChooser.h  SelectWorldScreen.cpp  SelectWorldScreen.h  SimpleChooseLevelScreen.cpp  SimpleChooseLevelScreen.h  StartMenuScreen.cpp  StartMenuScreen.h  TextEditScreen.cpp  TextEditScreen.h
src/client/gui/screens/crafting/: PaneCraftingScreen.cpp
src/client/gui/screens/desktop/: DesktopChestScreen.cpp  DesktopChestScreen.h  DesktopCraftingScreen.cpp  DesktopCraftingScreen.h  DesktopCreativeScreen.cpp  DesktopCreativeScreen.h  DesktopFurnaceScreen.cpp  DesktopFurnaceScreen.h
src/client/gui/screens/touch/: TouchIngameBlockSelectionScreen.h  TouchJoinGameScreen.cpp  TouchJoinGameScreen.h  TouchSelectWorldScreen.cpp  TouchSelectWorldScreen.h  TouchStartMenuScreen.cpp  TouchStartMenuScreen.h
src/client/model/: HumanoidModel.cpp  HumanoidModel.h
src/client/model/geom/: Cube.cpp  ModelPart.cpp  Polygon.cpp  Polygon.h
src/client/player/: LocalPlayer.cpp  LocalPlayer.h
src/client/player/input/: KeyboardInput.cpp  XperiaPlayInput.h
src/client/player/input/touchscreen/: TouchInputHolder.h  TouchscreenInput.cpp  TouchscreenInput.h
src/client/renderer/: Chunk.cpp  GameRenderer.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  Tesselator.cpp  Tesselator.h  TextureData.h  Textures.cpp  Textures.h  TileRenderer.cpp  TileRenderer.h  VertecDecl.h  gles.cpp  gles.h
src/client/renderer/entity/: EntityRenderDispatcher.cpp  EntityRenderer.cpp  EntityRenderer.h  HumanoidMobRenderer.cpp  HumanoidMobRenderer.h  ItemRenderer.cpp  ItemRenderer.h  MobRenderer.cpp  MobRenderer.h  PaintingRenderer.cpp  PlayerRenderer.cpp  PlayerRenderer.h
src/client/renderer/ptexture/: DynamicTexture.cpp  DynamicTexture.h
src/client/sound/: SoundEngine.cpp
src/network/: ClientSideNetworkHandler.cpp  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.h
src/network/packet/: SetTimePacket.h  StartGamePacket.h
src/platform/: CThread.cpp  CThread.h
src/platform/audio/: SoundSystemAL.h
src/platform/input/: Keyboard.cpp  Keyboard.h
src/raknet/: FileList.cpp  GetTime.cpp  RakPeer.cpp
src/server/: ArgumentsSettings.cpp  ArgumentsSettings.h  ServerPlayer.cpp  ServerPlayer.h
src/util/: Mth.cpp  Mth.h  PerfRenderer.cpp  PerfTimer.h
src/world/: Difficulty.h
src/world/entity/: Mob.cpp  Mob.h  MobCategory.cpp
src/world/entity/animal/: Chicken.cpp  Cow.cpp  Pig.cpp  Sheep.cpp
src/world/entity/monster/: Monster.cpp
src/world/entity/player/: Inventory.cpp  Player.cpp
src/world/inventory/: CraftingContainer.h
src/world/item/: BucketItem.h  DyePowderItem.cpp  FlintAndSteelItem.h  Item.cpp  ItemInclude.h  ShearsItem.h
src/world/item/crafting/: FurnaceRecipes.cpp  Recipes.cpp  Recipes.h  ShapedRecipe.h  ShapelessRecipe.h
src/world/level/: FoliageColor.h  Level.cpp  Level.h  LevelSettings.h  LevelSource.h  MobSpawner.cpp  Region.cpp  Region.h
src/world/level/biome/: Biome.cpp  Biome.h  BiomeSource.cpp  BiomeSource.h  ForestBiome.h  RainforestBiome.h
src/world/level/chunk/: ChunkCache.h  LevelChunk.cpp
src/world/level/dimension/: Dimension.cpp  Dimension.h  NetherDimension.cpp  NetherDimension.h  NormalDayCycleDimension.h
src/world/level/levelgen/: CanyonFeature.cpp  CanyonFeature.h  NetherLevelSource.cpp  NetherLevelSource.h  RandomLevelSource.cpp  RandomLevelSource.h
src/world/level/levelgen/feature/: FeatureInclude.h
src/world/level/storage/: ExternalFileLevelStorage.cpp  ExternalFileLevelStorage.h  LevelData.cpp  LevelData.h  LevelStorage.h  RegionFile.cpp  RegionFile.h
src/world/level/tile/: ButtonTile.h  CakeTile.h  DoorTile.cpp  DoorTile.h  FireTile.h  GrassTile.cpp  GrassTile.h  LeafTile.h  LeverTile.h  MiscTiles.h  NetherFenceTile.h  NetherReactorPattern.cpp  PistonTile.h  PortalTile.cpp  PortalTile.h  PressurePlateTile.h  PumpkinTile.h  RailTile.h  RedStoneDustTile.h  RedstoneLampTile.h  RedstoneTorchTile.h  Sapling.h  TallGrass.cpp  Tile.cpp  Tile.h  TileInclude.h
src/world/level/tile/entity/: NetherReactorTileEntity.cpp
win2k/: README.txt
